--- a/Project/appengine/static/user/style.css
+++ b/Project/appengine/static/user/style.css
@@ -1,11 +1,12 @@
 html{
-    height:100%;
+    /* height:100%; */
+    height: auto;
 }
 body{
     margin: 0px;
     display: grid;
-    grid-template-rows: auto auto auto;
-    height: 100%;
+    grid-template-rows: auto auto;
+    height: auto;
 }
 
 .header{
@@ -79,7 +80,7 @@ body{
     line-height: 1;
     font-family: 'hobeaux-rococeaux-background', Helvetica;
     font-weight: 200;
-    cursor: pointer;
+    /* cursor: pointer; */
     transition: all .3s ease;
     width: 100%;
     padding: 20px;
@@ -94,6 +95,7 @@ body{
     /* background-color: #00adbc; */
     display: grid;
     padding:10px;
+    height: 400px;
 }
 
 #info{
@@ -201,6 +203,13 @@ body{
     font-size: 12px;
     grid-row-start: 3;
     grid-row-end: 4;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    /* margin: 0% -320px; */
+    /* position: fixed; */
+    /* left: 50%; */
+    /* bottom: 0%; */
 }
 
 .footer a{
@@ -218,103 +227,5 @@ a{
 button.dropdown-btn{
     color: white;
     outline: none;
-}
-
-/*-------edit part----------*/
-
-#edit{
-
-    width: 90%;
-    padding: 5%;
-    padding-top: 5%;
-    box-sizing: border-box;
-
-}
-
-.item{
-    width: 100%;
-    padding: 10px;
-    
-}
-
-#edit label{
-    font-size: 16px;
-} 
-
-.item input{
-    outline: none;
-    border:none;
-    border-bottom: 1px solid black;
-    border-radius: 5px 5px 0px 0px;
-    width: 20%;
-    height: 30px;
-    font-size: 18px;
-    vertical-align: bottom;
-    margin-right:10px;
-    background-color:transparent;
-}
-
-.item input:focus{
-    transition: 1s;
-    background-color: rgb(255, 222, 180);
-}
-
-#name-ID{
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-
-#edit span{
-    margin-right:10px;
-}
-
-#name-ID input{
-    width: 50%;
-}
-
-#edit div.edit-dropdown{
-    margin-top: 10px;
-    background-color: antiquewhite;
-    box-shadow:3px 3px 9px grey;
-    display: none;
-    padding:10px;
-    padding-left: 0px;
-    height: 5%;
-}
-
-
-button{
-    outline: none;
-    height: 30px;
-    font-size:14px;
-    border-radius: 3px;
-}
-
-button:hover{
-    transition: 0.5s;
-    background-color: rgb(232, 226, 226);
-}
-
-.user-data{
-    margin-right:10px;
-}
-
-
-#name-ID .edit-dropdown{
-    width: 80%;
-}
-
-div#password-dropdown.edit-dropdown{
-    font-size: 12px;
-    height: 80px;
-}
-#password-dropdown.edit-dropdown input{
-    width:18%
-}
-
-#Birthday-drop-down select{
-    width: 60px;
-    height: 30px;
-    font-size: 14px;
 }
 
