--- a/Project/appengine/templates/user/teacher.html
+++ b/Project/appengine/templates/user/teacher.html
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   <!-- <script src="/static/user/user.js"></script> -->
   <link rel="stylesheet" href="../../static/user/style.css">
-  <link rel="stylesheet" href="../../static/user/edit.css">
+  <link rel="stylesheet" href="../../static/user/teacher.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
     crossorigin="anonymous">
   <title>Document</title>
@@ -32,7 +32,7 @@
       <a class="normal" href="/" id="log-out" data-i18n="header.logout">登出</a>
       <div id="setting-dropdown-div">
         <button class="dropdown-btn" id="setting">
-          <span data-i18n="header.setting.setting"></span>
+          <span data-i18n="header.setting.setting">設定</span>
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container">
@@ -74,6 +74,15 @@
             <div class="dropdown-container">
               <a href="" class="dropdown-option" data-i18n="options.community.friend">好友動態</a>
               <a href="javascript:void(0)" id="information" class="dropdown-option" data-i18n="options.community.edit">個人資料</a>
+          </div>
+          <div class="option">
+            <button class="dropdown-btn" class="button-option">
+              <span data-i18n="options.class.task">課程</span>
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-container">
+              <a href="javascript:void(0)" class="dropdown-option" data-i18n="options.class.add">新增</a>
+              <a href="javascript:void(0)" id="information" class="dropdown-option" data-i18n="options.class.backend">後台</a>
             </div>
           </div>
           <!-- <div class="option">
@@ -86,6 +95,7 @@
                   <a href="" class="dropdown-option">c</a>
               </div>
           </div> -->
+          </div>
         </div>
       </div>
     </div>
@@ -184,6 +194,47 @@
           </div>
         </div>
       </div>
+
+      <div id="addclass" style="display:block">
+        <div id="add-title">
+            <span style="font-size: 40px;">新增任務</span>
+            <div style="border: 1px solid lightgrey"></div>
+        </div>
+        <div id="name" class='item'>
+          <label for="className">任務名稱</label>
+          <input type="text" id="inputName">
+        </div>
+        <!-- <div id="number" class='item'>
+          <label for="classNumber">任務代碼</label>
+          <input type="text" id="inputNumber">
+        </div> -->
+        <div id="private" class="item">
+          <label for="classPrivate">私人任務</label>
+          <select name="mode-selector" id="mode">
+              <option selected>選擇任務型態</option>
+              <option value="1">公開</option>
+              <option value="0">保護</option>
+              <option value="-1">私人</option>
+          </select>
+          <!-- <label for="yes">是</label> -->
+          <!-- <button id="yes" value="true">是</button> -->
+          <!-- <input type="checkbox" name="privateYes" id="yesBox"> -->
+          <!-- <label for="yes">否</label> -->
+          <!-- <button id="no" value="false">否</button> -->
+          <!-- <input type="checkbox" name="privateNo" id="noBox"> -->
+        </div>
+        <div id="discription" class="">
+          <p>任務描述</p>
+          <textarea name="taskDiscription" id="inputDiscription" cols="100" rows="10"></textarea>
+        </div>
+        <div id="inherit">
+          <label>加入任務</label>
+          <div id="publicClass">
+          </div>
+          <button id="submitClasses">送出</button>
+        </div>
+      </div>
+      
     </div><!-- letter-->
   </div> <!-- wrapper-->
   <div class="footer">
@@ -211,6 +262,8 @@
   <script src="../../static/user/user.js"></script>
   <script src="../../static/user/edit.js"></script>
   <script src="../../static/user/class.js"></script>
+  <script src="../../static/user/teacher.js"></script>
+  
   <!-- <script src="../../static/user/user.js"></script> -->
 </body>
 
